Second pass of changes

--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -88,6 +88,9 @@ code
   font-size: $code-size
   font-weight: $code-weight
   padding: $code-padding
+  @media (prefers-color-scheme: dark)
+    background-color: $code-background-dark
+    color: $code-dark
 
 hr
   background-color: $hr-background-color
