--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -1,6 +1,9 @@
 $footer-background-color: $white-bis !default
+$footer-background-color-dark: $black-bis !default
 $footer-padding: 3rem 1.5rem 6rem !default
 
 .footer
   background-color: $footer-background-color
   padding: $footer-padding
+  @media (prefers-color-scheme: dark)
+    background-color: $footer-background-color-dark
