--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -49,7 +49,9 @@ $text-strong-dark: $grey-lighter !default
 // Code colors
 
 $code: $red !default
+$code-dark: darken($red, 20%) !default
 $code-background: $background !default
+$code-background-dark: $background-dark !default
 
 $pre: $text !default
 $pre-dark: $text-dark !default
@@ -61,6 +63,7 @@ $pre-background-dark: $background-dark !default
 $link: $blue !default
 $link-dark: $blue-light !default
 $link-invert: $blue-invert !default
+$link-invert-dark: $blue-invert !default
 $link-visited: $purple !default
 
 $link-hover: $grey-darker !default
