--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -1,30 +1,46 @@
 $tabs-border-bottom-color: $border !default
+$tabs-border-bottom-color-dark: $border-dark !default
 $tabs-border-bottom-style: solid !default
 $tabs-border-bottom-width: 1px !default
 $tabs-link-color: $text !default
+$tabs-link-color-dark: $text-dark !default
 $tabs-link-hover-border-bottom-color: $text-strong !default
+$tabs-link-hover-border-bottom-color-dark: $text-strong-dark !default
 $tabs-link-hover-color: $text-strong !default
+$tabs-link-hover-color-dark: $text-strong-dark !default
 $tabs-link-active-border-bottom-color: $link !default
+$tabs-link-active-border-bottom-color-dark: $link-dark !default
 $tabs-link-active-color: $link !default
+$tabs-link-active-color-dark: $link-dark !default
 $tabs-link-padding: 0.5em 1em !default
 
 $tabs-boxed-link-radius: $radius !default
 $tabs-boxed-link-hover-background-color: $background !default
+$tabs-boxed-link-hover-background-color-dark: $background-dark !default
 $tabs-boxed-link-hover-border-bottom-color: $border !default
+$tabs-boxed-link-hover-border-bottom-color-dark: $border-dark !default
 
 $tabs-boxed-link-active-background-color: $white !default
+$tabs-boxed-link-active-background-color-dark: $black !default
 $tabs-boxed-link-active-border-color: $border !default
+$tabs-boxed-link-active-border-color-dark: $border-dark !default
 $tabs-boxed-link-active-border-bottom-color: transparent !default
 
 $tabs-toggle-link-border-color: $border !default
+$tabs-toggle-link-border-color-dark: $border-dark !default
 $tabs-toggle-link-border-style: solid !default
 $tabs-toggle-link-border-width: 1px !default
 $tabs-toggle-link-hover-background-color: $background !default
+$tabs-toggle-link-hover-background-color-dark: $background-dark !default
 $tabs-toggle-link-hover-border-color: $border-hover !default
+$tabs-toggle-link-hover-border-color-dark: $border-hover-dark !default
 $tabs-toggle-link-radius: $radius !default
 $tabs-toggle-link-active-background-color: $link !default
+$tabs-toggle-link-active-background-color-dark: $link-dark !default
 $tabs-toggle-link-active-border-color: $link !default
+$tabs-toggle-link-active-border-color-dark: $link-dark !default
 $tabs-toggle-link-active-color: $link-invert !default
+$tabs-toggle-link-active-color-dark: $link-invert-dark !default
 
 .tabs
   @extend %block
@@ -48,15 +64,24 @@ $tabs-toggle-link-active-color: $link-invert !default
     margin-bottom: -#{$tabs-border-bottom-width}
     padding: $tabs-link-padding
     vertical-align: top
+    @media (prefers-color-scheme: dark)
+      border-bottom-color: $tabs-border-bottom-color-dark
+      color: $tabs-link-color-dark
     &:hover
       border-bottom-color: $tabs-link-hover-border-bottom-color
       color: $tabs-link-hover-color
+      @media (prefers-color-scheme: dark)
+        border-bottom-color: $tabs-link-hover-border-bottom-color-dark
+        color: $tabs-link-hover-color-dark
   li
     display: block
     &.is-active
       a
         border-bottom-color: $tabs-link-active-border-bottom-color
         color: $tabs-link-active-color
+        @media (prefers-color-scheme: dark)
+          border-bottom-color: $tabs-link-active-border-bottom-color-dark
+          color: $tabs-link-active-color-dark
   ul
     align-items: center
     border-bottom-color: $tabs-border-bottom-color
@@ -66,6 +91,8 @@ $tabs-toggle-link-active-color: $link-invert !default
     flex-grow: 1
     flex-shrink: 0
     justify-content: flex-start
+    @media (prefers-color-scheme: dark)
+      border-bottom-color: $tabs-border-bottom-color-dark
     &.is-left
       padding-right: 0.75em
     &.is-center
@@ -96,12 +123,18 @@ $tabs-toggle-link-active-color: $link-invert !default
       &:hover
         background-color: $tabs-boxed-link-hover-background-color
         border-bottom-color: $tabs-boxed-link-hover-border-bottom-color
+        @media (prefers-color-scheme: dark)
+          background-color: $tabs-boxed-link-hover-background-color-dark
+          border-bottom-color: $tabs-boxed-link-hover-border-bottom-color-dark
     li
       &.is-active
         a
           background-color: $tabs-boxed-link-active-background-color
           border-color: $tabs-boxed-link-active-border-color
           border-bottom-color: $tabs-boxed-link-active-border-bottom-color !important
+          @media (prefers-color-scheme: dark)
+            background-color: $tabs-boxed-link-active-background-color-dark
+            border-color: $tabs-boxed-link-active-border-color-dark
   &.is-fullwidth
     li
       flex-grow: 1
@@ -113,10 +146,15 @@ $tabs-toggle-link-active-color: $link-invert !default
       border-width: $tabs-toggle-link-border-width
       margin-bottom: 0
       position: relative
+      @media (prefers-color-scheme: dark)
+        border-color: $tabs-toggle-link-border-color-dark
       &:hover
         background-color: $tabs-toggle-link-hover-background-color
         border-color: $tabs-toggle-link-hover-border-color
         z-index: 2
+        @media (prefers-color-scheme: dark)
+          background-color: $tabs-toggle-link-hover-background-color-dark
+          border-color: $tabs-toggle-link-hover-border-color-dark
     li
       & + li
         margin-left: -#{$tabs-toggle-link-border-width}
@@ -130,6 +168,10 @@ $tabs-toggle-link-active-color: $link-invert !default
           border-color: $tabs-toggle-link-active-border-color
           color: $tabs-toggle-link-active-color
           z-index: 1
+          @media (prefers-color-scheme: dark)
+            background-color: $tabs-toggle-link-active-background-color-dark
+            border-color: $tabs-toggle-link-active-border-color-dark
+            color: $tabs-toggle-link-active-color-dark
     ul
       border-bottom: none
     &.is-toggle-rounded
