--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,11 +1,16 @@
 $box-color: $text !default
+$box-color-dark: $text-dark !default
 $box-background-color: $white !default
+$box-background-color-dark: $black !default
 $box-radius: $radius-large !default
 $box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default
+$box-shadow-dark: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($white, 0.1) !default
 $box-padding: 1.25rem !default
 
 $box-link-hover-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px $link !default
+$box-link-hover-shadow-dark: 0 2px 3px rgba($white, 0.1), 0 0 0 1px $link-dark !default
 $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link !default
+$box-link-active-shadow-dark: inset 0 1px 2px rgba($white, 0.2), 0 0 0 1px $link-dark !default
 
 .box
   @extend %block
@@ -15,10 +20,18 @@ $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link !def
   color: $box-color
   display: block
   padding: $box-padding
+  @media (prefers-color-scheme: dark)
+    background-color: $box-background-color-dark
+    box-shadow: $box-shadow-dark
+    color: $box-color-dark
 
 a.box
   &:hover,
   &:focus
     box-shadow: $box-link-hover-shadow
+    @media (prefers-color-scheme: dark)
+      box-shadow: $box-link-hover-shadow-dark
   &:active
     box-shadow: $box-link-active-shadow
+    @media (prefers-color-scheme: dark)
+      box-shadow: $box-link-active-shadow-dark
