Add is-spaced documentation in Navbar

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -1280,5 +1280,24 @@ $(document).ready(function() {
   {% include examples/navbar-color.html color="white" light=true %}
 </div>
 
-{% include elements/variables.html type='component' %}
+{% include elements/anchor.html name="Navbar Helper Classes" %}
 
+<table class="table is-bordered">
+  <tbody>
+    <tr>
+      <th>Type</th>
+      <th>Name</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <th rowspan="1">Spacing</th>
+      <td><code>is-spaced</code></td>
+      <td>Sets <strong>Top</strong> and <strong>Bottom</strong> paddings with <strong>1rem</strong>,
+          <br> <strong>Left</strong> and <strong>Right</strong> paddings with <strong>2rem</strong>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
+{% include elements/variables.html type='component' %}
