--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -271,5 +271,13 @@ $button-static-border-color: $grey-lighter !default
         flex-grow: 1
   &.is-centered
     justify-content: center
+    &:not(.has-addons) 
+      .button:not(.is-fullwidth)
+        margin-left: 0.25rem
+        margin-right: 0.25rem
   &.is-right
     justify-content: flex-end
+    &:not(.has-addons) 
+      .button:not(.is-fullwidth)
+        margin-left: 0.25rem
+        margin-right: 0.25rem
