--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -145,6 +145,9 @@ $content-table-foot-cell-color: $text-strong !default
           td,
           th
             border-bottom-width: 0
+    .tabs
+      li + li
+        margin-top: 0          
   // Sizes
   &.is-small
     font-size: $size-small
