--- a/bulma.sass
+++ b/bulma.sass
@@ -3,6 +3,7 @@
 @import "sass/utilities/_all"
 @import "sass/base/_all"
 @import "sass/elements/_all"
+@import "sass/form/_all"
 @import "sass/components/_all"
 @import "sass/grid/_all"
 @import "sass/layout/_all"
