Added foreground (e.g., text) color to the footer
While setting up my own site, I was surprised to find that this wasn't an option!

--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -1,6 +1,8 @@
 $footer-background-color: $white-bis !default
+$footer-color: $text !default
 $footer-padding: 3rem 1.5rem 6rem !default
 
 .footer
   background-color: $footer-background-color
+  color: $footer-color
   padding: $footer-padding
