--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -87,11 +87,12 @@ $content-table-foot-cell-color: $text-strong !default
     list-style: disc outside
     margin-left: 2em
     margin-top: 1em
+    
     ul
       list-style-type: circle
       margin-top: 0.5em
       ul
-        list-style-type: square
+        list-style-type: square    
   dd
     margin-left: 2em
   figure
@@ -143,6 +144,9 @@ $content-table-foot-cell-color: $text-strong !default
           td,
           th
             border-bottom-width: 0
+  .tabs
+    li + li
+      margin-top: 0 
   // Sizes
   &.is-small
     font-size: $size-small
